--- a/Ejemplo/angular.json
+++ b/Ejemplo/angular.json
@@ -116,6 +116,10 @@
               "devServerTarget": "Ejemplo:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
